# cgem

./: .codedocs  CMakeLists.txt  Doxyfile.in  MakeBuild.makefile  Makefile  README.md  config.mk  doc.cmake  external_packages.cmake  log_variables.cmake
Backtrace/: Backtrace.h  test.cpp
C/Trie/: Makefile  test.c  trie.c  trie.h
C/Vector/: Makefile  vector.h
C/stack_direction/: Makefile  stack_direction.c  stack_direction.h  test.c
CT/math/: factorial.h
CircularBuffer/: CircularBuffer.h  test.cpp
CpuCache/: CpuCache.h  test.cpp
FSM/: fsm.h  test.cpp
File/: Dir.h  File.h  Makefile  test.cpp
Graph/: Graph.h  Makefile  test.cpp
JRS/: Makefile  jrs.cpp  jrs.h  jrs2txt.cpp  test.cpp
LRUcache/: Makefile
Lambda/: Lambda.h  Makefile  test.cpp
Range/: Range.h  test.cpp
StaticString/: Makefile
StringBuf/: Makefile  StringBuf.cpp  StringBuf.h  test.c  test.cpp
TelnetServer/: TelnetServer.h
XML/: Makefile  Parser.h  XMLParser.cpp  XMLParser.h  test.cpp
design/: AllocateMemoryOnStack.dox
doc/: CMakeLists.txt  Doxyfile.in
doc/c/: Doxyfile  Makefile
doc/cpp/: Makefile
doc/d/: Doxyfile  MainPage.dox
doc/index/: MainPage.dox  Makefile
logging/: logging.h  old_logging.cpp  old_logging.h  test.cpp
math/swap/: gcc_pragma_macros.h
meta/: type_list.h
mixin/: Makefile  mixin.h  test.cpp
old/: Makefile
old/Backtrace/: Backtrace.cpp
old/C/Trie/: trie.h
old/C/Vector/: test.c
old/C/alloca/: alloca.c
old/CircularBuffer/: CircularBuffer.h
old/File/: Dir.cpp  test.cpp
old/JRS/: Makefile
old/LRUcache/: LRUcache.h
old/ScopeGuard/: ScopeGuard.h
old/StaticString/: test.cpp
old/StringBuf/: StringBuf.h  test.cpp
old/XML/: XMLParser.cpp  test.cpp
old/logging/: Makefile
old/math/LA/: Matrix.h
old/math/swap/: test.c  test.cpp
old/mixin/: mixin.h
src/app/: component.makefile
src/app/d/toolbox/: Makefile  tc.d  unzip.d
src/c/: CMakeLists.txt
src/c/stack_direction/: CMakeLists.txt  stack_direction.c  stack_direction.h
src/cgem/: CMakeLists.txt
src/cgem/c/: component.makefile
src/cgem/c/ADT/: Makefile
src/cgem/c/ADT/List/: List.h  Makefile  test.c
src/cgem/c/ADT/Trie/: trie.h
src/cgem/c/ADT/Vector/: test.c
src/cgem/c/Trie/: test.c  trie.c  trie.h
src/cgem/c/Vector/: Makefile  test.c  vector.h
src/cgem/c/stack_direction/: Makefile  stack_direction.c  test.c
src/cgem/cpp/: component.makefile
src/cgem/cpp/CpuCache/: CpuCache.h  Makefile
src/cgem/cpp/Range/: Makefile  Range.h  test.cpp
src/cgem/d/: component.makefile
src/cgem/d/idiom/: times.d
src/cgem/d/io/: Makefile  file.d
src/cgem/d/physics/: Makefile  length.d  temperature.d  time.d
src/cgem/d/sqrt_iter/: Makefile  sqrt_iter.d
src/cgem/lisp/lottery/: lottery.scm  lottery.sh
src/cgem/stack_direction/: CMakeLists.txt  stack_direction.c
src/cgm/: CMakeLists.txt  numrange.h  stack_array.h  stack_direction.h
src/cgm/ct/: bits.h  math.h
src/cgm/model/: cpu_cache.h
src/cpp/: CMakeLists.txt  stack_direction.h
test/: CMakeLists.txt
test/cpu_cache/: CMakeLists.txt  test_cpu_cache.cpp
test/ct_math/: CMakeLists.txt  test_ct_math.cpp
test/numrange/: CMakeLists.txt  test_numrange.cpp
test/stack_array/: CMakeLists.txt  test_stack_array.cpp
test/stack_direction/: CMakeLists.txt  main.cpp
units/: computer.h
v1/Backtrace/: Makefile
v1/Graph/: dijkstra.h
v1/LRUcache/: test.cpp
v1/StaticString/: StaticString.h
v1/StringBuf/: StringBuf.c
v1/TelnetServer/: TelnetServer.cpp
v1/helpers/: static_assert.h
v1/logging/: logging.cpp  logging.h
v1/math/swap/: swap_numbers.h
v2/: MakeBuild.makefile  README.md
v2/doc/c/: Doxyfile  MainPage.dox  Makefile
v2/doc/cpp/: Doxyfile  MainPage.dox  Makefile
v2/doc/d/: Makefile
v2/doc/index/: Doxyfile  MainPage.dox
v2/src/app/d/toolbox/: main.d  wc.d  zip.d
v2/src/cgem/c/ADT/List/: List.h  test.c
v2/src/cgem/c/ADT/Trie/: Makefile  test.c  trie.c  trie.h
v2/src/cgem/c/stack_direction/: Makefile  stack_direction.h  test.c
v2/src/cgem/cpp/: component.makefile
v2/src/cgem/cpp/Range/: Makefile
v2/src/cgem/d/idiom/: block.d
v2/src/cgem/d/physics/: Makefile  length.d  quantity.d  realnum.d  velocity.d
v2/src/cgem/d/sqrt_iter/: sqrt_iter.d  test.d
v2/src/cgem/lisp/lottery/: lottery.scm
